add method level comments,removed unwanted imports and copyright